Added AuditLogger for Smooth Debugging